# Tool_Recording_AI

./: .cursorrules  .gitignore  README.md  Scope.md  main.py  pyproject.toml
core_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md
